style.css
body {
    background-color: #3C3C3C;
    font-family: 'Arvo', serif;
    color: white;
    padding: 100px;
    padding-top: 10px;
}


  
h1 {
    font-weight: bold;
    text-align: center;
}
  
p {
    font-size: 20px;
}

.name-bookstore {
    text-align: center;
}

.name {
    font-size: 20px;
}

input {
    padding: 10px;
    margin-top: 20px;
    font-family: 'Fira Sans', serif;
    font-size: 20px;
}

.fade-in {
	opacity: 1;
	animation-name: fadeInOpacity;
	animation-iteration-count: 1;
	animation-timing-function: ease-in;
	animation-duration: 1s;
}

.section {
    padding: 30px;
}

.title {
    font-weight: bold;
    font-size: 20px;
    padding-bottom: 20px;
}


.button {
    padding: 10px;
    background: white;
    margin: 10px;
    color: black;

}

.button:hover{
    background: lightgrey;
}
@keyframes fadeInOpacity {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}


/* styles for gameplay page */

.sidebar {
    width: 500px;
    padding-left: 0px;
    padding-top: 20px;
}

.bookstore-name {
    font-size: 45px;
    padding: 10px;
}

.time {
    align-self: flex-end;
}

.status-bar {
    display: flex;
}

.status {
    padding-right: 30px;
    font-size: 20px;
}

.status-thumbnail {
    width:22px;
    height:20px;
}

.hue-shift {
    filter: saturate(500%) contrast(800%) brightness(40%) 
    invert(80%) sepia(50%) hue-rotate(120deg);
}

.time {
    padding: 10px;
    text-align: center;
}

#day {
    font-size: 25px;
    padding-bottom: 10px;
}

#hours {
    color: rgb(197, 197, 197);
}

#clock {
    padding-bottom: 10px;
}

.gameplay-container {
    margin-top: 20px;
    width: 800px;
    background-color: rgba(73, 53, 30, 0.591);
    margin-right: 0px;
    height: 800px;
}

#bookshelf {
    background-color: rgba(164, 122, 48, 0.591);
    margin-left: 490px;
    width: 250px;
}

.location {
    height: 80px;
    display: flex;
    justify-content: center;
    text-align: center;
    align-content: center;
    flex-direction: column;
    font-weight: bold;
    opacity: 0.9;
    letter-spacing: .1rem;
    border-bottom: 20px solid rgba(1, 1, 1, 0.2);
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    cursor: pointer;
}

.character {
    width:35px;
    height:70px;
}

.container-plane {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    
}

#protag-plane {
    padding: 10px;
    padding-bottom: 0px;
}

#protag {
    padding-left: 250px;
    transition-property: padding-left;
    transition-duration: 4s;
    animation-timing-function: ease;
    width: 90px;
    height: 90px;
}

#counter-plane {
    display: flex;

}

#checkout {
    background-color: rgba(183, 183, 183, 0.591);

}

#rec-corner {
    background-color: rgba(67, 59, 153, 0.591);
    margin-right: 60px;

}

#customer-plane {
    display: flex;
}

.checkout-align {
    margin-left: 50px;
    width: 400px;

}

.rec-align {
    width: 400px;
    margin-left: 100px;

}

.customer-spawn {


    display: flex;


    flex-direction: row;
    justify-content: center;
    font-weight: bold;
    opacity: 0.9;
    letter-spacing: .1rem;
    width: 400px;

    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    padding-top: 10px;
}

.customer {
    margin-left: 10px;
    margin-right: 10px;
    opacity: 1;
    -webkit-transition: opacity 1000ms linear;
    transition: opacity 1000ms linear;
}

#protag-status {
    padding-bottom: 100px;
    color:rgb(119, 119, 119);
    -webkit-transition: opacity 1000ms linear;
    transition: opacity 1000ms linear;
}

#checkout-customers {
    flex-direction: column;
    padding-left: 90px;
}

.dialogue {
    background-color: rgb(230, 230, 230);
    display: flex;
    color:rgba(1, 1, 1, 1);
    opacity: 0;
    -webkit-transition: opacity 500ms linear;
    transition: opacity 500ms linear;
    height: 0px;
}

.dialogue-text {
    padding: 20px;
    pointer-events: none;
}

.customer-portrait {
    height: 100px;
}

#bookshelf-box {
    height: 600px;
}

.link {
    color: blue;
    font-weight: bold;
    cursor: pointer;
}


.hand {
    width: 40%;
    height: 6px;
    background: #61afff;
    position: relative;
    top: 50%;
    left: 40px;
    border-radius: 6px;
    transform-origin: 100%;
    transform: rotate(90deg);
    transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
  }
  
.time-hand {
    bottom: 25px;
}

.main {
    display: flex;
}

.time-container {
    background-color: rgb(75, 75, 75);
}

.message-box {
    background-color: rgb(191, 191, 191);
    height: 550px;
}

#checkout-link {
    padding: 30px;
    background-color:rgb(122, 73, 13);
    color: white;
    margin: auto;
    margin-top: 100px;
}

.link {
    padding: 10px;
}

.meter {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

